# android_db_app

./: .gitignore  .pre-commit-config.yaml  LICENSE  database_protocol.py  db_setup.py  design.kv  main.py  pyproject.toml  shops.py
models/: __init__.py  base.py  donation.py  organization.py  shop.py  transaction.py
services/: constants.py  date.py
